fixed alignments 3

--- a/src/footer/Footer.css
+++ b/src/footer/Footer.css
@@ -2,6 +2,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
+  z-index: -1;
   /* background-color: #b4f151; */
   height: 1rem;
 }
@@ -44,6 +45,7 @@
 
 .footerbox2 {
   padding: 50px 50px;
+
   background: linear-gradient(45deg, cadetblue, pink);
   /* background-color: #ffa20d; */
 }
